Actions
Bug #10108
closedlibstmfproxy needs smatch fixes
Start date:
2018-12-19
Due date:
% Done:
100%
Estimated time:
Difficulty:
Medium
Tags:
needs-triage
Gerrit CR:
External Bug:
Description
Need to cast some functions to void.
Updated by Electric Monk over 4 years ago
- Status changed from New to Closed
- % Done changed from 0 to 100
git commit feb176ed7e0a1726bd78c575ee5225ae49b5b0a8
commit feb176ed7e0a1726bd78c575ee5225ae49b5b0a8 Author: John Levon <john.levon@joyent.com> Date: 2019-03-21T00:33:24.000Z 10108 libstmfproxy needs smatch fixes Reviewed by: Andy Stormont <astormont@racktopsystems.com> Reviewed by: Toomas Soome <tsoome@me.com> Reviewed by: Gergő Doma <domag02@gmail.com> Approved by: Richard Lowe <richlowe@richlowe.net>
Actions